--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
-  profiles:
-    active: local
+  # profiles:
+  #   active: local
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
