update pom.xml and application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
+
 spring:
   # profiles:
   #   active: local
+  application:
+    name: the-spring-boot-project
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
